<resources>
    <string name="app_name">TofuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    LOGIN SCREEN    -->
    <string name="login_label_slogan">Cook, Share, Discover!</string>
    <string name="login_input_username_hint">Username</string>
    <string name="login_input_password_hint">Password</string>
    <string name="login_button_login">Login</string>
    <string name="login_label_not_member_text">Not a Member?</string>
    <string name="login_label_register_text">Register</string>
</resources>